--- a/U4/Clase3/.htaccess
+++ b/U4/Clase3/.htaccess
@@ -1,4 +1,8 @@
 Options +FollowSymLinks -MultiViews
 RewriteEngine on
 
+RewriteRule ^login$ index.php
+RewriteRule ^product/all$ products/index.php
+RewriteRule ^product/([a-zA-Z0-9-]*)$ products/details.php?slug=$1
 RewriteRule ^auth$ app/AuthController.php
+RewriteRule ^prod$ app/ProductController.php
